@@ -23,67 +23,55 @@ import java.util.concurrent.atomic.AtomicReference;
 @Service
 public class SeasonSqlRepository implements SeasonDatabase {
 
-  private final JdbcTemplate jdbcTemplate;
+    private final JdbcTemplate jdbcTemplate;
 
-  @Override
-  public void save(TeamInSeason teamInSeason) {
-    jdbcTemplate.update("INSERT INTO team_in_season VALUES ?", teamInSeason.getId().toString());
-    teamInSeason.getFootballers().forEach(f ->
-            jdbcTemplate.update("INSERT INTO teams_footballers VALUES (?, ?) ", teamInSeason.getId().toString(), f.getId()));
-  }
+    @Override
+    public void save(TeamInSeason teamInSeason) {
+        jdbcTemplate.update("INSERT INTO team_in_season VALUES ?", teamInSeason.getId().toString());
+        teamInSeason.getFootballers().forEach(f ->
+                jdbcTemplate.update("INSERT INTO teams_footballers VALUES (?, ?) ", teamInSeason.getId().toString(), f.getId()));
+    }
 
-  /*
-  id name team_id footbaler_instance_id injury_id till          reason name        footballer_id
-  1   unia 1       11                      111     2024-05-25  'faul' 'skrecenie'    11
-  1   unia 1       11                      222     2024-06-25  'faul' 'nos'          11
-  1   unia 1       12                      null          null    null   null         null
-  1   unia 1       13                      null          null    null   null         null
-  1   unia 1       14                      null          null    null   null         null
-  1   unia 1       15                      null          null    null   null         null
-   */
-  @Override
-  public TeamInSeason find() {
-    List<FootballerInstance> footballers = new ArrayList<>();
-    AtomicReference<Optional<UUID>> teamInSeasonId = new AtomicReference<>(Optional.empty());
-    jdbcTemplate.query("SELECT * FROM teams t JOIN teams_footballers tf ON t.id = tf.team_id left JOIN injuries inj on inj.footballer_id = tf.footballer_instance_id ",
-            rs -> {
-              do {
-                if (teamInSeasonId.get().isEmpty()) {
-                  teamInSeasonId.set(Optional.of(UUID.fromString(rs.getString(1))));
-                }
+    /*
+    id name team_id footbaler_instance_id injury_id till          reason name        footballer_id
+    1   unia 1       11                      111     2024-05-25  'faul' 'skrecenie'    11
+    1   unia 1       11                      222     2024-06-25  'faul' 'nos'          11
+    1   unia 1       12                      null          null    null   null         null
+    1   unia 1       13                      null          null    null   null         null
+    1   unia 1       14                      null          null    null   null         null
+    1   unia 1       15                      null          null    null   null         null
+     */
+    @Override
+    public TeamInSeason find() {
+        List<FootballerInstance> footballers = new ArrayList<>();
+        AtomicReference<Optional<UUID>> teamInSeasonId = new AtomicReference<>(Optional.empty());
+        jdbcTemplate.query("SELECT * FROM teams t JOIN teams_footballers tf ON t.id = tf.team_id left JOIN injuries inj on inj.footballer_id = tf.footballer_instance_id ",
+                rs -> {
+                    do {
+                        if (teamInSeasonId.get().isEmpty()) {
+                            teamInSeasonId.set(Optional.of(UUID.fromString(rs.getString(1))));
+                        }
 
-                if (Objects.nonNull(rs.getString(4))) {
-                  var footballerInstance = new FootballerInstance(
-                          UUID.fromString(rs.getString(4)), List.of(
-                          new Injury(UUID.fromString(rs.getString(4)),
-                                  rs.getDate("till").toLocalDate(),
-                                  rs.getString("name"),
-                                  rs.getString("reason"),
-                                  InjuryStatus.valueOf(rs.getString("status"))
-                          )
-                  ));
-                  footballers.add(footballerInstance);
-                } else {
-                  footballers.add(new FootballerInstance(UUID.fromString(rs.getString(4)), Collections.emptyList()));
-                }
+                        if (Objects.nonNull(rs.getString(4))) {
+                            var footballerInstance = new FootballerInstance(
+                                    UUID.fromString(rs.getString(4)), List.of(
+                                    new Injury(UUID.fromString(rs.getString(4)),
+                                            rs.getDate("till").toLocalDate(),
+                                            rs.getString("name"),
+                                            rs.getString("reason"),
+                                            InjuryStatus.valueOf(rs.getString("status"))
+                                    )
+                            ));
+                            footballers.add(footballerInstance);
+                        } else {
+                            footballers.add(new FootballerInstance(UUID.fromString(rs.getString(4)), Collections.emptyList()));
+                        }
+                    }
+                    while (rs.next());
+                });
+        return new TeamInSeason(teamInSeasonId.get().get(), new HashSet<>(footballers));
+    }
 
-
-//                var footballer = footballers.stream()
-//                        .filter(f -> {
-//                          try {
-//                            return f.getId().equals(
-//                                    UUID.fromString(rs.getString("footballer_instance_id")));
-//                          } catch (SQLException e) {
-//                            throw new RuntimeException(e);
-//                          }
-//                        })
-//                        .findFirst();
-              }
-              while (rs.next());
-            });
-    return new TeamInSeason(teamInSeasonId.get().get(), new HashSet<>(footballers));
-  }
-
-  ;
+    ;
 
 }
